[project]
name = "mediarage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pyside6>=6.9.0",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
]
venv = ".venv"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
]
